# aishowtest

./: .cursorrules  .gitignore  .gitmodules  README.md  aishowtest.code-workspace
GUI/: package-lock.json  package.json
GUI/src/: App.tsx  main.tsx  theme.css
GUI/src/api/: client.ts
GUI/src/pages/: AteboxPage.tsx  ConfigEntryPage.tsx  OverviewPage.tsx
aishowtestwindrv-py/: drv_chr.py  pcie_shell.py
aishowtestwindrv-py/Lib/: CHR34XXX.lib  CHR44X02.lib
ate-conn-sample/: README.md  conn.py  heartbeat.py  main.py  push.py  server.py
ate-conn-starter/: README.md  conn.py  const.py  dev_run.py  drv_sim_aishow.py  heartbeat.py  inst.py  log.py  main.py  mock_oscilloscope.py  push.py  reply_spec.py  requirements.txt  server.py  test_shell.py
gui-backend/: README  pyproject.toml
gui-backend/app/: config.py  main.py  models.py
gui-backend/app/routes/: atebox.py  overview.py  video.py
pcidemo/chr34/: CHR34XXX01.cpp  CHR34XXX02.cpp  CHR34XXX03.cpp  CHR34XXX04.cpp  CHR34XXX05.cpp  CHR34XXX06.cpp  CHR34XXX07.cpp  CHR34XXX08.cpp  FastUse.cpp  RxGener.cpp  SynChRx.cpp  SynTxTime.cpp  TxOnce.cpp  TxTime.cpp  demo_types.h  test.cpp  说明.txt
pcidemo/chr34/CHR34XXX01/: CHR34XXX01.sln  UpgradeLog.htm
pcidemo/chr34/CHR34XXX01/CHR34XXX01/: ReadMe.txt  (+6 more)
pcidemo/chr44/: demo_0.cpp  demo_1.cpp  demo_2.cpp  ver_helpers_legacy.h  version.txt  测试例程说明.txt
pcidemo/chr44/Lib/: CHR44X02.lib
pcidemo/chr44/TestProj/: TestProj.sln
script/: 12225-S5 接线定义.xls  15400XV1.json  DEV15400_V2.py  Instrument_compatibility.cloud  [公开] 测试设备通信指令(2).docx
video-service/: video_service.yaml
(+110 files in other folders)
